logging module, meld cards, pdf, param module, output_name

--- a/conf/global.ini
+++ b/conf/global.ini
@@ -3,9 +3,10 @@ proxy_list = input\Proxy.txt
 scans_directory = scans
 
 [output]
-output_path = output
+output_directory = output
+output_name =
+output_type = pdf
 
 [mode]
-online_mode = True
-offline_mode = True
-mode_priority = online
+mode_priority = offline
+try_other_method = False
